--- a/values/neuvector.yaml
+++ b/values/neuvector.yaml
@@ -1,5 +1,9 @@
 neuvector:
-  enabled: true
+  enabled: false
+  git:
+    tag: 2.4.2-bb.0
   values:
     containerd:
       enabled: true
+    monitor:
+      install: false # getting error here on having this come up
