--- a/values/loki.yaml
+++ b/values/loki.yaml
@@ -1,23 +1,23 @@
 
 loki:
   enabled: true
-  strategy: "scalable"
-  objectStorage:
-    endpoint: minio.minio.svc.cluster.local
-    region: "minio"
-    # accessKey: "" -- Added in environment-bb/values.yaml
-    # accessSecret: "" -- Added in environment-bb/values.yaml
-    bucketNames:
-      chunks: loki-logs
-      ruler: loki-ruler
-      admin: loki-admin
+  strategy: "monolith"
+  # objectStorage:
+  #   endpoint: minio.minio.svc.cluster.local
+  #   region: "minio"
+  #   # accessKey: "" -- Added in environment-bb/values.yaml
+  #   # accessSecret: "" -- Added in environment-bb/values.yaml
+  #   bucketNames:
+  #     chunks: loki-logs
+  #     ruler: loki-ruler
+  #     admin: loki-admin
   values:
-    read:
-      replicas: 1
-    write:
-      replicas: 1
-    minio:
-      enabled: false
+    # read:
+    #   replicas: 1
+    # write:
+    #   replicas: 1
+    # minio:
+    #   enabled: false
     istio:
       mtls:
         mode: PERMISSIVE
