--- a/values/neuvector.yaml
+++ b/values/neuvector.yaml
@@ -1,9 +1,12 @@
 neuvector:
-  enabled: false
+  enabled: true
   git:
-    tag: 2.4.2-bb.0
+    tag: 2.4.2-bb.3
   values:
     containerd:
-      enabled: true
+      enabled: false
     monitor:
-      install: false # getting error here on having this come up
+      install: true # getting error here on having this come up
+
+### crictl config --set runtime-endpoint=/var/run/containerd/containerd.sock
+# 
