Added variables for keycloak ingress certs
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/cocowow/zarf-config.yaml
+++ b/cocowow/zarf-config.yaml
@@ -3,3 +3,7 @@ package:
     max_package_size: "1000000000"
     set:
       bigbang_version: "1.55.0"
+  deploy:
+    set:
+      keycloak_key_file: bigbang.dev.key
+      keycloak_cert_file: bigbang.dev.cert 
