fix: cert/key refs and move kyverno hr delete up

--- a/defense-unicorns-distro/zarf-config.yaml
+++ b/defense-unicorns-distro/zarf-config.yaml
@@ -6,5 +6,5 @@ package:
   deploy:
     set:
       domain: tom.bigbang.dev
-      public_key_file: tom.bigbang.dev.key
-      public_cert_file: tom.bigbang.dev.cert
+      public_key_file: bigbang.dev.key
+      public_cert_file: bigbang.dev.cert
