fixed grafana pvc creation
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/values/monitoring.yaml
+++ b/values/monitoring.yaml
@@ -10,12 +10,10 @@ monitoring:
     grafana:
       persistence:
         type: pvc
-        enabled: false
-        # storageClassName: default
+        enabled: true
         accessModes:
           - ReadWriteOnce
         size: "###ZARF_VAR_MONITORING_GRAFANA_PVC_SIZE###"
-        # annotations: {}
         finalizers:
           - kubernetes.io/pvc-protection
     prometheus:
