create and inject s3 into loki
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/values/loki.yaml
+++ b/values/loki.yaml
@@ -21,3 +21,6 @@ loki:
     istio:
       mtls:
         mode: PERMISSIVE
+    singleBinary:
+      persistence:
+          size: ###ZARF_VAR_LOKI_PVC_SIZE###
