update CI to build aws version
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -30,3 +30,6 @@ jobs:
       - name: Create CocoWow
         run: zarf package create --confirm
         working-directory: cocowow
+      - name: Create DUBBD AWS 
+        run: zarf package create --confirm
+        working-directory: aws
