feat: set renovate props for bb ver

--- a/defense-unicorns-distro/zarf-config.yaml
+++ b/defense-unicorns-distro/zarf-config.yaml
@@ -2,6 +2,7 @@ package:
   create: 
     max_package_size: "1000000000"
     set:
+      # renovate: datasource=gitlab-tags depName=big-bang/bigbang versioning=semver registryUrl=https://repo1.dso.mil
       bigbang_version: "1.55.0"
   deploy:
     set:
