--- a/.github/workflows/eks/config.yaml
+++ b/.github/workflows/eks/config.yaml
@@ -2,11 +2,11 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: bigbang-aws-install
+  name: ###ZARF_VAR_CLUSTER_NAME###
   region: us-west-2
   version: "1.23"
 
-# May want to look at this for testing https://eksctl.io/usage/eks-private-cluster/
+# May want to look at this for testing 
 # privateCluster:
 #   enabled: true
 
@@ -24,5 +24,3 @@ managedNodeGroups:
     instanceType: m5.2xlarge
     desiredCapacity: 2
     volumeSize: 150
-    ssh:
-      allow: true
