--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -34,11 +34,11 @@ jobs:
         run: zarf package create --confirm
         working-directory: aws
 
-      - name: login DUBBD
-        run: zarf tools registry login ghcr.io -u runyontr -p ${GH_PAT}
-      - name: publish DUBBD
-        run: zarf package publish zarf-package-big-bang-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages/big-bang-distro
-        working-directory: defense-unicorns-distro
-      - name: publish DUBBD
-        run: zarf package publish zarf-package-big-bang-aws-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages/big-bang-distro-aws
-        working-directory: aws
+      # - name: login DUBBD
+      #   run: zarf tools registry login ghcr.io -u runyontr -p ${GH_PAT}
+      # - name: publish DUBBD
+      #   run: zarf package publish zarf-package-big-bang-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages/big-bang-distro
+      #   working-directory: defense-unicorns-distro
+      # - name: publish DUBBD
+      #   run: zarf package publish zarf-package-big-bang-aws-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages/big-bang-distro-aws
+      #   working-directory: aws
