--- a/.github/workflows/eksctl.yaml
+++ b/.github/workflows/eksctl.yaml
@@ -29,7 +29,6 @@ jobs:
         run: |
           eksctl create cluster \
           -f config.yaml
-        
         working-directory: .github/workflows/eks
         # eventually have zarf deploy --set cluster_name=${GITHUB_SHA:0:7} \
       - name: Show Cluster
@@ -40,5 +39,6 @@ jobs:
         # if: github.event_name == 'workflow_dispatch'
         run: |
           eksctl delete cluster \
-          -f config.yaml
+          -f config.yaml --disable-nodegroup-eviction --wait
+        working-directory: .github/workflows/eks
 
