--- a/.github/workflows/eks/config.yaml
+++ b/.github/workflows/eks/config.yaml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: cicd-testing
+  name: ###ZARF_VAR_CLUSTER_NAME###
   region: us-west-2
   version: "1.23"
 
