--- a/.github/workflows/pipeline.eksctl.yaml
+++ b/.github/workflows/pipeline.eksctl.yaml
@@ -24,6 +24,13 @@ jobs:
         uses: defenseunicorns/setup-zarf@main
         with:
           version: v0.25.0
+
+      - name: Login to Registry1
+        uses: docker/login-action@v1
+        with:
+          registry: registry1.dso.mil
+          username: ${{ secrets.REGISTRY1_USERNAME }}
+          password: ${{ secrets.REGISTRY1_PASSWORD }}
     
       - name: Package EKSCTL 
         run: zarf package create --confirm
@@ -36,6 +43,16 @@ jobs:
       - name: Show Cluster
         run: |
           kubectl get nodes
+
+      - name: Create DUBBD
+        run: zarf package create --confirm
+        working-directory: defense-unicorns-distro
+        timeout-minutes: 60m
+      
+      - name: Create DUBBD
+        run: zarf package deploy zarf-package-*.tar.zst --confirm
+        working-directory: defense-unicorns-distro
+        timeout-minutes: 60m
 
       - name: Teardown EKS cluster
         if: always()
