--- a/.github/workflows/pipeline.eksctl.yaml
+++ b/.github/workflows/pipeline.eksctl.yaml
@@ -44,6 +44,9 @@ jobs:
         run: |
           kubectl get nodes
 
+      - name: Zarf init
+        run: |
+          zarf init -a amd64 --components=git-server
 
       - name: Create DUBBD
         run: zarf package create --confirm
