--- a/.github/workflows/pipeline.eksctl.yaml
+++ b/.github/workflows/pipeline.eksctl.yaml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Zarf init
         run: |
-          zarf init -a amd64 --components=git-server
+          zarf init -a amd64 --components=git-server --confirm
 
       - name: Create DUBBD
         run: zarf package create --confirm
