--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -1,5 +1,5 @@
 
-name: EKS Cluster Deployment
+name: DUBBD AWS
 
 on:
   pull_request:
@@ -67,7 +67,7 @@ jobs:
 
       
       - name: Deploy DUBBD-AWS
-        run: zarf package deploy zarf-package-*.tar.zst --confirm --set eks_oidc_provider_arn=${env.OIDC}
+        run: zarf package deploy zarf-package-*.tar.zst --confirm --set eks_oidc_provider_arn=${{ env.OIDC }}
         working-directory: aws
         timeout-minutes: 60
 
